test/files/pos/t2868/Nest.java
public @interface Nest {
    public int value();
}
