test/files/neg/t10260/IC.java
public interface IC {
    C foo(int a, C b, String c);
}
